NSP/api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-network-policy
  # namespace: fleetman
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: webapp
    # ports:
    # - protocol: TCP
    #   port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: staff-service
    - podSelector:
        matchLabels:
          app: position-tracker 
    # ports:
    # - protocol: TCP
    #   port: 8080
