NSP/position-simulator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: position-simulator-network-policy
  namespace: fleetman
spec:
  podSelector:
    matchLabels:
      app: position-simulator
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: staff-service 
    - podSelector:
        matchLabels:
          app: position-simulator
    ports:
    - protocol: TCP
      port: 8080
