NSP/vehicle-telemetry.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vehicle-telemetry-network-policy
  namespace: fleetman
spec:
  podSelector:
    matchLabels:
      app: vehicle-telemetry
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: position-tracker
    # ports:
    # - protocol: TCP
    #   port: 8080
